--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -322,7 +322,7 @@
 </p>
 <h3><span class="mw-headline" id="Arbeitsbereich_TechDraw"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Arbeitsbereich TechDraw</span></h3>
 <div class="mw-collapsible-content">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_TechDraw_AuxiliaryView.html" title="Macro TechDraw AuxiliaryView/de">Macro TechDraw Hilfsansicht</a></span>: F&uuml;gt einem TechDraw-Zeichnungsblatt eine Hilfsansicht hinzu.</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_TechDraw_AuxiliaryView.html" title="Macro TechDraw AuxiliaryView/de">Makro TechDraw Hilfsansicht</a></span>: F&uuml;gt einem TechDraw-Zeichnungsblatt eine Hilfsansicht hinzu.</li></ul>
 </div>
 </div>
 <div class="toccolours mw-collapsible mw-collapsed">
@@ -416,12 +416,12 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113200342
+Cached time: 20260113200401
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.479 seconds
-Real time usage: 0.590 seconds
+CPU time usage: 0.505 seconds
+Real time usage: 0.600 seconds
 Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 28791/2097152 bytes
 Template argument size: 16111/2097152 bytes
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.507      1 -total
- 37.11%   10.578    219 Template:MacroLink
- 10.71%    3.054      6 Template:MenuCommand
-  7.35%    2.095      1 Template:Version/de
-  7.21%    2.055      1 Template:TOCright
-  4.66%    1.329      3 Template:Button
+100.00%   36.156      1 -total
+ 40.55%   14.661    219 Template:MacroLink
+ 11.97%    4.328      1 Template:Version/de
+  6.99%    2.529      3 Template:Button
+  5.67%    2.050      6 Template:MenuCommand
+  3.24%    1.173      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200341 and revision id 1738002. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200400 and revision id 1738004. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
