--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -41,9 +41,9 @@
 <li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Install</span></li>
 <li>Restart FreeCAD</li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Manual_Installation">Manual Installation</span></h3>
-</div>
+<p><span id="Manual_Installation"></span>
+</p>
+<h3><span class="mw-headline" id="Manuelle_Installation">Manuelle Installation</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Download the latest release from <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/releases">GitHub Releases</a> and extract to your FreeCAD Mod directory:
 </p>
@@ -243,12 +243,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113200527
+Cached time: 20260113200549
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.104 seconds
+CPU time usage: 0.045 seconds
+Real time usage: 0.064 seconds
 Preprocessor visited node count: 246/1000000
 Post&#8208;expand include size: 2239/2097152 bytes
 Template argument size: 742/2097152 bytes
@@ -259,16 +259,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.313      1 -total
- 34.34%   10.753      4 Template:Code
- 20.54%    6.430      3 Template:FileName
- 10.53%    3.296      3 Template:Button
- 10.33%    3.234      5 Template:Incode
-  6.60%    2.068      4 Template:MenuCommand
-  5.75%    1.801      1 Template:TOCright
+100.00%   19.826      1 -total
+ 22.46%    4.454      4 Template:Code
+ 20.35%    4.035      5 Template:Incode
+ 19.14%    3.795      3 Template:FileName
+ 13.53%    2.683      1 Template:TOCright
+  9.63%    1.909      3 Template:Button
+  8.00%    1.586      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200527 and revision id 1738016. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200549 and revision id 1738018. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
