--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Robust+MCP+Bridge+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Robust_MCP_Bridge_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Robust MCP Bridge Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -44,10 +44,8 @@
 <p><span id="Manual_Installation"></span>
 </p>
 <h3><span class="mw-headline" id="Manuelle_Installation">Manuelle Installation</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Download the latest release from <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/releases">GitHub Releases</a> and extract to your FreeCAD Mod directory:
+<p>Die neueste Version von <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/releases">GitHub-Ver&ouml;ffentlichungen</a> herunterladen und sie in das FreeCAD Mod-Verzeichnis extrahieren:
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li>
 <li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li>
@@ -243,13 +241,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113200549
+Cached time: 20260113200639
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.064 seconds
-Preprocessor visited node count: 246/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.048 seconds
+Preprocessor visited node count: 245/1000000
 Post&#8208;expand include size: 2239/2097152 bytes
 Template argument size: 742/2097152 bytes
 Highest expansion depth: 4/100
@@ -259,16 +257,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.826      1 -total
- 22.46%    4.454      4 Template:Code
- 20.35%    4.035      5 Template:Incode
- 19.14%    3.795      3 Template:FileName
- 13.53%    2.683      1 Template:TOCright
-  9.63%    1.909      3 Template:Button
-  8.00%    1.586      4 Template:MenuCommand
+100.00%    9.322      1 -total
+ 25.33%    2.361      4 Template:Code
+ 15.09%    1.407      3 Template:FileName
+ 13.58%    1.266      3 Template:Button
+ 12.79%    1.192      5 Template:Incode
+ 11.51%    1.073      1 Template:TOCright
+ 10.58%    0.986      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200549 and revision id 1738018. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200639 and revision id 1738020. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
