--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -6,9 +6,9 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge Workbench icon</figcaption></figure>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The <b>Robust MCP Bridge Workbench</b> provides the server-side connection point that provides a bridge to the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>, which enables external applications to control FreeCAD through the <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a>. The workbench runs inside FreeCAD and exposes XML-RPC and JSON-RPC interfaces that external MCP clients can connect to.
 </p>
@@ -241,12 +241,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113200639
+Cached time: 20260113200650
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.048 seconds
+CPU time usage: 0.042 seconds
+Real time usage: 0.056 seconds
 Preprocessor visited node count: 245/1000000
 Post&#8208;expand include size: 2239/2097152 bytes
 Template argument size: 742/2097152 bytes
@@ -257,16 +257,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.322      1 -total
- 25.33%    2.361      4 Template:Code
- 15.09%    1.407      3 Template:FileName
- 13.58%    1.266      3 Template:Button
- 12.79%    1.192      5 Template:Incode
- 11.51%    1.073      1 Template:TOCright
- 10.58%    0.986      4 Template:MenuCommand
+100.00%   13.706      1 -total
+ 18.36%    2.516      4 Template:Code
+ 16.25%    2.227      1 Template:TOCright
+ 15.86%    2.173      3 Template:FileName
+ 15.07%    2.065      4 Template:MenuCommand
+ 14.20%    1.946      5 Template:Incode
+ 12.02%    1.647      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200639 and revision id 1738020. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200650 and revision id 1738022. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
