--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -32,13 +32,11 @@
 <p><span id="Via_Addon_Manager_(Recommended)"></span>
 </p>
 <h3><span id=".C3.9Cber_den_Addon-Manager_.28Empfohlen.29"></span><span class="mw-headline" id="&Uuml;ber_den_Addon-Manager_(Empfohlen)">&Uuml;ber den Addon-Manager (Empfohlen)</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Open FreeCAD</li>
-<li>Go to <b>Tools &rarr; Addon Manager</b></li>
-<li>Search for "Robust MCP Bridge"</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Install</span></li>
-<li>Restart FreeCAD</li></ol>
-</div>
+<ol><li>FreeCAD &ouml;ffnen.</li>
+<li>Zum <b>Extras &rarr; Addon-Manager</b> gehen.</li>
+<li>Nach &bdquo;Robust MCP Bridge&ldquo; suchen.</li>
+<li>Auf <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Installieren</span> klicken.</li>
+<li>FreeCAD neu starten.</li></ol>
 <p><span id="Manual_Installation"></span>
 </p>
 <h3><span class="mw-headline" id="Manuelle_Installation">Manuelle Installation</span></h3>
@@ -239,15 +237,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113200718
+Cached time: 20260113200808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.062 seconds
-Preprocessor visited node count: 244/1000000
-Post&#8208;expand include size: 2239/2097152 bytes
-Template argument size: 742/2097152 bytes
+CPU time usage: 0.041 seconds
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 243/1000000
+Post&#8208;expand include size: 2245/2097152 bytes
+Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -255,16 +253,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.025      1 -total
- 22.03%    2.209      4 Template:Code
- 20.58%    2.063      4 Template:MenuCommand
- 11.87%    1.190      3 Template:FileName
- 11.85%    1.188      1 Template:TOCright
- 11.78%    1.181      5 Template:Incode
- 11.29%    1.132      3 Template:Button
+100.00%    9.212      1 -total
+ 20.91%    1.926      4 Template:Code
+ 14.52%    1.338      3 Template:FileName
+ 14.17%    1.305      4 Template:MenuCommand
+ 13.43%    1.237      5 Template:Incode
+ 13.37%    1.231      1 Template:TOCright
+ 12.65%    1.165      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200718 and revision id 1738026. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200808 and revision id 1738028. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
