--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -2,9 +2,7 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Robust_MCP_Bridge_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Robust MCP Bridge Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<figure typeof="mw:File/Thumb"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge Workbench icon</figcaption></figure>
-</div>
+<figure typeof="mw:File/Thumb"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Symbol des Arbeitsbereichs Robust MCP Bridge</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span id="Description"></span>
 </p>
@@ -237,13 +235,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113200841
+Cached time: 20260113200904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 244/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.049 seconds
+Preprocessor visited node count: 243/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -253,16 +251,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.488      1 -total
- 23.88%    3.221      4 Template:Code
- 16.36%    2.207      1 Template:TOCright
- 14.71%    1.985      5 Template:Incode
- 13.10%    1.767      4 Template:MenuCommand
- 12.87%    1.736      3 Template:FileName
- 10.03%    1.353      3 Template:Button
+100.00%    9.945      1 -total
+ 23.94%    2.380      4 Template:Code
+ 18.09%    1.799      3 Template:FileName
+ 14.66%    1.458      5 Template:Incode
+ 12.88%    1.281      4 Template:MenuCommand
+ 11.05%    1.099      1 Template:TOCright
+  9.08%    0.903      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200841 and revision id 1738028. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200904 and revision id 1738031. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
