--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -177,9 +177,9 @@
 <td>No
 </td></tr></tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Connecting_MCP_Clients">Connecting MCP Clients</span></h2>
-</div>
+<p><span id="Connecting_MCP_Clients"></span>
+</p>
+<h2><span class="mw-headline" id="MCP-Clients_verbinden">MCP-Clients verbinden</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This workbench provides the server that MCP clients connect to. To use with AI assistants like Claude, you need an MCP client such as the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>:
 </p>
@@ -233,12 +233,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201106
+Cached time: 20260113201124
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.078 seconds
+CPU time usage: 0.039 seconds
+Real time usage: 0.052 seconds
 Preprocessor visited node count: 242/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
@@ -249,16 +249,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.879      1 -total
- 19.43%    3.863      4 Template:Code
- 18.00%    3.578      1 Template:TOCright
- 14.99%    2.979      5 Template:Incode
- 13.94%    2.771      3 Template:FileName
- 13.28%    2.640      4 Template:MenuCommand
- 10.30%    2.047      3 Template:Button
+100.00%   10.568      1 -total
+ 19.85%    2.098      4 Template:Code
+ 17.69%    1.870      1 Template:TOCright
+ 16.67%    1.761      5 Template:Incode
+ 15.63%    1.652      4 Template:MenuCommand
+ 11.35%    1.200      3 Template:Button
+  8.59%    0.908      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201106 and revision id 1738037. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201123 and revision id 1738039. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
