--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -186,10 +186,8 @@
 </div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">pip</span> <span class="n">install</span> <span class="n">freecad</span><span class="o">-</span><span class="n">robust</span><span class="o">-</span><span class="n">mcp</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Or using uv:
+<p>Oder mit uv:
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">uv</span> <span class="n">tool</span> <span class="n">install</span> <span class="n">freecad</span><span class="o">-</span><span class="n">robust</span><span class="o">-</span><span class="n">mcp</span>
 </pre></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -233,13 +231,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201124
+Cached time: 20260113201150
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.052 seconds
-Preprocessor visited node count: 242/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.064 seconds
+Preprocessor visited node count: 241/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -249,16 +247,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.568      1 -total
- 19.85%    2.098      4 Template:Code
- 17.69%    1.870      1 Template:TOCright
- 16.67%    1.761      5 Template:Incode
- 15.63%    1.652      4 Template:MenuCommand
- 11.35%    1.200      3 Template:Button
-  8.59%    0.908      3 Template:FileName
+100.00%   10.942      1 -total
+ 24.40%    2.670      4 Template:Code
+ 14.39%    1.575      1 Template:TOCright
+ 12.94%    1.416      5 Template:Incode
+ 12.69%    1.388      4 Template:MenuCommand
+ 12.15%    1.329      3 Template:Button
+ 11.50%    1.258      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201123 and revision id 1738039. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201150 and revision id 1738041. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
