--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -194,9 +194,9 @@
 <p>See the <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub repository</a> for full documentation on configuring MCP clients.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Troubleshooting">Troubleshooting</span></h2>
-</div>
+<p><span id="Troubleshooting"></span>
+</p>
+<h2><span class="mw-headline" id="Fehlerbehebung">Fehlerbehebung</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span id="Bridge_Won.27t_Start"></span><span class="mw-headline" id="Bridge_Won't_Start">Bridge Won't Start</span></h3>
 </div>
@@ -231,12 +231,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201150
+Cached time: 20260113201201
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.064 seconds
+CPU time usage: 0.051 seconds
+Real time usage: 0.068 seconds
 Preprocessor visited node count: 241/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
@@ -247,16 +247,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.942      1 -total
- 24.40%    2.670      4 Template:Code
- 14.39%    1.575      1 Template:TOCright
- 12.94%    1.416      5 Template:Incode
- 12.69%    1.388      4 Template:MenuCommand
- 12.15%    1.329      3 Template:Button
- 11.50%    1.258      3 Template:FileName
+100.00%   16.323      1 -total
+ 20.84%    3.401      5 Template:Incode
+ 17.99%    2.937      4 Template:Code
+ 15.54%    2.536      4 Template:MenuCommand
+ 14.67%    2.395      1 Template:TOCright
+ 11.91%    1.944      3 Template:Button
+ 10.14%    1.655      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201150 and revision id 1738041. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201201 and revision id 1738043. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
