--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -197,9 +197,9 @@
 <p><span id="Troubleshooting"></span>
 </p>
 <h2><span class="mw-headline" id="Fehlerbehebung">Fehlerbehebung</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span id="Bridge_Won.27t_Start"></span><span class="mw-headline" id="Bridge_Won't_Start">Bridge Won't Start</span></h3>
-</div>
+<p><span id="Bridge_Won't_Start"></span>
+</p>
+<h3><span id="Br.C3.BCcke_startet_nicht"></span><span class="mw-headline" id="Br&uuml;cke_startet_nicht">Br&uuml;cke startet nicht</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Check the FreeCAD Python console (<b>View &rarr; Panels &rarr; Python console</b>) for error messages.</li>
 <li>Ensure no other process is using ports 9875/9876.</li>
@@ -231,12 +231,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201201
+Cached time: 20260113201212
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.051 seconds
-Real time usage: 0.068 seconds
+CPU time usage: 0.043 seconds
+Real time usage: 0.088 seconds
 Preprocessor visited node count: 241/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
@@ -247,16 +247,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.323      1 -total
- 20.84%    3.401      5 Template:Incode
- 17.99%    2.937      4 Template:Code
- 15.54%    2.536      4 Template:MenuCommand
- 14.67%    2.395      1 Template:TOCright
- 11.91%    1.944      3 Template:Button
- 10.14%    1.655      3 Template:FileName
+100.00%   19.905      1 -total
+ 24.00%    4.777      5 Template:Incode
+ 20.95%    4.170      4 Template:MenuCommand
+ 15.92%    3.168      1 Template:TOCright
+ 15.38%    3.061      4 Template:Code
+ 11.26%    2.242      3 Template:FileName
+  5.50%    1.094      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201201 and revision id 1738043. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201212 and revision id 1738045. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
