--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -205,9 +205,9 @@
 <li>Ensure no other process is using ports 9875/9876.</li>
 <li>Try restarting FreeCAD.</li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Connection_Refused">Connection Refused</span></h3>
-</div>
+<p><span id="Connection_Refused"></span>
+</p>
+<h3><span class="mw-headline" id="Verbindung_abgelehnt">Verbindung abgelehnt</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Verify the bridge is running (green status indicator in toolbar).</li>
 <li>Check that ports match between the workbench preferences and your MCP client configuration.</li>
@@ -231,12 +231,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201212
+Cached time: 20260113201220
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.088 seconds
+CPU time usage: 0.036 seconds
+Real time usage: 0.045 seconds
 Preprocessor visited node count: 241/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
@@ -247,16 +247,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.905      1 -total
- 24.00%    4.777      5 Template:Incode
- 20.95%    4.170      4 Template:MenuCommand
- 15.92%    3.168      1 Template:TOCright
- 15.38%    3.061      4 Template:Code
- 11.26%    2.242      3 Template:FileName
-  5.50%    1.094      3 Template:Button
+100.00%    9.300      1 -total
+ 20.24%    1.882      4 Template:Code
+ 17.87%    1.662      1 Template:TOCright
+ 17.51%    1.628      5 Template:Incode
+ 13.02%    1.211      4 Template:MenuCommand
+ 10.39%    0.966      3 Template:Button
+ 10.31%    0.959      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201212 and revision id 1738045. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201219 and revision id 1738047. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
