--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -213,9 +213,9 @@
 <li>Check that ports match between the workbench preferences and your MCP client configuration.</li>
 <li>If connecting from Docker, use <code>host.docker.internal</code> instead of <code>localhost</code>.</li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span id="Headless_Mode_Won.27t_Start"></span><span class="mw-headline" id="Headless_Mode_Won't_Start">Headless Mode Won't Start</span></h3>
-</div>
+<p><span id="Headless_Mode_Won't_Start"></span>
+</p>
+<h3><span class="mw-headline" id="Kopfloser-Modus_startet_nicht">Kopfloser-Modus startet nicht</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Ensure you're using <code>freecadcmd</code> (not <code>freecad</code>).</li>
 <li>Verify the script path is correct for your installation.</li>
@@ -231,12 +231,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201220
+Cached time: 20260113201300
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.045 seconds
+CPU time usage: 0.039 seconds
+Real time usage: 0.051 seconds
 Preprocessor visited node count: 241/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
@@ -247,16 +247,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.300      1 -total
- 20.24%    1.882      4 Template:Code
- 17.87%    1.662      1 Template:TOCright
- 17.51%    1.628      5 Template:Incode
- 13.02%    1.211      4 Template:MenuCommand
- 10.39%    0.966      3 Template:Button
- 10.31%    0.959      3 Template:FileName
+100.00%    9.325      1 -total
+ 23.88%    2.226      4 Template:Code
+ 22.72%    2.119      5 Template:Incode
+ 11.57%    1.079      4 Template:MenuCommand
+ 10.53%    0.982      3 Template:Button
+ 10.37%    0.967      3 Template:FileName
+  9.66%    0.901      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201219 and revision id 1738047. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201300 and revision id 1738049. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
